support for AVX cpu docker (i think? my macbook aint AVX)

--- a/TODO
+++ b/TODO
@@ -7,3 +7,6 @@ add:
 https://github.com/cutterbl/SoundTouchJS
 
 to change the pitch, tempo, semitone
+
+rocm windows
+https://github.com/Bod9001/DockerFileForAMDAIWin
